haproxy.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-haproxy
  namespace: default
spec:
  ports:
    - port: 80
      name: http
    - port: 443
      name: https
    - port: 1936
      name: managament
  selector:
    run: haproxy-ingress
#  type: LoadBalancer
  type: NodePort
