ingress_rule.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myingress  
  annotations:    
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/configuration-snippet: |
#     if ($http_x_forwarded_proto != 'https') { 
#        return 301 https://$host$request_uri;
#      }
spec:  
  rules:
#  - host: mymicroservices.xpirit.nl
  - http:
      paths:      
      - path: /
        backend:
          serviceName: wso2ei-service
          servicePort: 9443
